--- a/app/src/main/res/layout/all_widget.xml
+++ b/app/src/main/res/layout/all_widget.xml
@@ -75,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="#FF0000"
             android:text=" " />
     </LinearLayout>
 
